[package]
name = "gitapi"
version = "0.1.0"
authors = ["Nils Martel <nils.martel@graphmasters.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.24"
serde_json = "*"
serde = "*"
structopt = "0.3.5"                # Parse command line argument by defining a struct.
nom = "5.0.1"                # A byte-oriented, zero-copy, parser combinators library
